--- a/config/yugabyte/colocated/insert_batched_extra_index_2_colocated.yaml
+++ b/config/yugabyte/colocated/insert_batched_extra_index_2_colocated.yaml
@@ -25,10 +25,10 @@ microbenchmark:
                 AS $$
                 DECLARE
                 BEGIN
-                insert into demo (id, col1, col2, col3, col4, col5, col6, col7, col8, col9, col10) select n, n, n+100, n*10+1, n-45, n, n, n*50, n*10, n+1111, n from generate_series(1,_numRows) n;
+                insert into demo (id, col1, col2, col3, col4, col5, col6, col7, col8, col9, col10) select n, n, n, n, n, n, n, n, n, n, n from generate_series(1,_numRows) n;
                 END;
                 $$;
             - drop table if exists demo;
-            - create table demo (id int primary key, col1 int, col2 int, col3 int, col4 int, col5 int, col6 int, col7 int, col8 int, col9 int, col10 int);
-            - create index demo_idx1 on demo(col1);
-            - create index demo_idx2 on demo(col2);
+            - create table demo (id int not null primary key, col1 int not null, col2 int, col3 int, col4 int, col5 int, col6 int, col7 int, col8 int, col9 int, col10 int);
+            - create unique index demo_idx1 on demo(col1);
+            - create unique index demo_idx2 on demo(col2);
