--- a/config/yugabyte/non-colocated/insert_sequential_extra_index_1.yaml
+++ b/config/yugabyte/non-colocated/insert_sequential_extra_index_1.yaml
@@ -24,9 +24,9 @@ microbenchmark:
                 AS $$
                 DECLARE
                 BEGIN
-                insert into demo (id, col1, col2, col3, col4, col5, col6, col7, col8, col9, col10) select n, n, n+100, n*10+1, n-45, n, n, n*50, n*10, n+1111, n from generate_series(1,_numRows) n;
+                insert into demo (id, col1, col2, col3, col4, col5, col6, col7, col8, col9, col10) select n, n, n, n, n, n, n, n, n, n, n from generate_series(1,_numRows) n;
                 END;
                 $$;
             - drop table if exists demo;
-            - create table demo (id int primary key, col1 int, col2 int, col3 int, col4 int, col5 int, col6 int, col7 int, col8 int, col9 int, col10 int) split into 1 tablets;
-            - create index demo_idx1 on demo(col1) split into 1 tablets;
+            - create table demo (id int not null primary key, col1 int not null, col2 int, col3 int, col4 int, col5 int, col6 int, col7 int, col8 int, col9 int, col10 int) split into 1 tablets;
+            - create unique index demo_idx1 on demo(col1) split into 1 tablets;
