--- a/config/demo/insert_goal1_yb_colocated.yaml
+++ b/config/demo/insert_goal1_yb_colocated.yaml
@@ -5,7 +5,7 @@ url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=require&ApplicationName=f
 username: yugabyte
 password: Password321@
 
-
+collect_pg_stat_statements: true
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 4
