--- a/config/yugabyte/insert_workload/yb/insert_goal1_yb_colocated.yaml
+++ b/config/yugabyte/insert_workload/yb/insert_goal1_yb_colocated.yaml
@@ -9,6 +9,7 @@ batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 4
 terminals: 1
+collect_pg_stat_statements: true
 works:
     work:
         time_secs: 300
