--- a/config/yugabyte/demo/explain_changes.yaml
+++ b/config/yugabyte/demo/explain_changes.yaml
@@ -8,7 +8,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
 terminals: 1
 collect_pg_stat_statements: true
-explain_use_dist : true
+use_dist_in_explain : true
 works:
     work:
         time_secs: 5
