--- a/config/yugabyte/update_workload/pg/update_goal1_pg.yaml
+++ b/config/yugabyte/update_workload/pg/update_goal1_pg.yaml
@@ -1,10 +1,8 @@
-type: YUGABYTE
-driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.22.150:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: yugabyte
-password: Password321@
-
-createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
+type: postgres
+driver: org.postgresql.Driver
+url: jdbc:postgresql://sagarwal-pg-rds-14.cbtcvpszcgdq.us-west-2.rds.amazonaws.com:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+username: postgres
+password: Password321
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 4
@@ -24,9 +22,9 @@ microbenchmark:
             - drop table if exists update_test_table1;
             - drop table if exists update_test_table2;
             - drop table if exists update_test_table3;
-            - create table update_test_table1 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
-            - create table update_test_table2 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
-            - create table update_test_table3 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
+            - create table update_test_table1 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id))
+            - create table update_test_table2 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id))
+            - create table update_test_table3 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id))
         loadRules:
             - table: update_test_table
               count: 3
@@ -54,7 +52,7 @@ microbenchmark:
                   - name: Update_1_row
                     weight: 100
                     queries:
-                        - query: UPDATE update_test_table1 set col3 = ? where id = ?
+                        - query: UPDATE update_test_table1 set col_varchar_3 = ? where id = ?
                           bindings:
                               - util: RandomAString
                                 params: [20, 20]
@@ -65,7 +63,7 @@ microbenchmark:
                   - name: update_100_rows
                     weight: 100
                     queries:
-                        - query: UPDATE update_test_table2 set col3 = ? where id > 100 and id <= 200
+                        - query: UPDATE update_test_table2 set col_varchar_3 = ? where id > 100 and id <= 200
                           bindings:
                               - util: RandomAString
                                 params: [20, 20]
@@ -75,7 +73,7 @@ microbenchmark:
                   - name: update_1000_rows
                     weight: 100
                     queries:
-                        - query: UPDATE update_test_table3 set col3 = ? where id > 1000 and id <= 2000
+                        - query: UPDATE update_test_table3 set col_varchar_3 = ? where id > 1000 and id <= 2000
                           bindings:
                               - util: RandomAString
                                 params: [20, 20]
