--- a/config/yugabyte/update_workload/yb/update_goal1_yb.yaml
+++ b/config/yugabyte/update_workload/yb/update_goal1_yb.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.22.150:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://172.151.16.174:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
-password: Password321@
+password: Password@321
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
