--- a/config/yugabyte/write_workloads/insert/yugabyte/insertG2_varying_columns_yb.yaml
+++ b/config/yugabyte/write_workloads/insert/yugabyte/insertG2_varying_columns_yb.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.22.150:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
-password: Password321@
+password: password
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
