--- a/config/yugabyte/write_workloads/insert/postgres/insertG1_varying_index_pg.yaml
+++ b/config/yugabyte/write_workloads/insert/postgres/insertG1_varying_index_pg.yaml
@@ -1,10 +1,8 @@
-type: YUGABYTE
-driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.22.150:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: yugabyte
-password: Password321@
-
-createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
+type: POSTGRES
+driver: org.postgresql.Driver
+url: jdbc:postgresql://localhost:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+username: postgres
+password: password
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 4
@@ -25,10 +23,10 @@ microbenchmark:
             - drop table if exists index_test_2;
             - drop table if exists index_test_3;
             - drop table if exists index_test_4;
-            - create table index_test_1 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
-            - create table index_test_2 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
-            - create table index_test_3 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
-            - create table index_test_4 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
+            - create table index_test_1 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id))
+            - create table index_test_2 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id))
+            - create table index_test_3 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id))
+            - create table index_test_4 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id))
             - create index index_test_2_idx1 on index_test_2(col_int_1);
             - create index index_test_3_idx1 on index_test_3(col_int_1);
             - create index index_test_3_idx2 on index_test_3(col_int_2);
@@ -48,30 +46,22 @@ microbenchmark:
         loadRules:
             -   table: index_test_
                 count: 4
-                rows: 100000
+                rows: 1000000
                 columns:
                     -   name: id
                         util: PrimaryIntGen
-                        params:
-                            - 1
-                            - 1000000
+                        params: [ 1, 1000000 ]
                     -   name: col_int_
                         count: 10
                         util: RandomNumber
-                        params:
-                            - 1
-                            - 1000000
+                        params: [ 1, 1000000 ]
                     -   name: col_varchar_
                         count: 3
                         util: RandomAString
-                        params:
-                            - 5
-                            - 5
+                        params: [ 20, 20 ]
                     -   name: col_date
                         util: RandomAString
-                        params:
-                            - 5
-                            - 5
+                        params: [ 20, 20 ]
                     -   name: col_boolean
                         util: RandomBoolean
         executeRules:
@@ -143,4 +133,3 @@ microbenchmark:
                                         count: 4
                                         params: [ 20, 20 ]
                                     -   util: RandomBoolean
-
