--- a/config/yugabyte/write_workloads/insert/postgres/insertG2_varying_columns_pg.yaml
+++ b/config/yugabyte/write_workloads/insert/postgres/insertG2_varying_columns_pg.yaml
@@ -1,11 +1,8 @@
-type: YUGABYTE
-driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.22.150:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: yugabyte
-password: Password321@
-
-#colocated tables
-createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
+type: POSTGRES
+driver: org.postgresql.Driver
+url: jdbc:postgresql://localhost:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+username: postgres
+password: password
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
@@ -100,3 +97,4 @@ microbenchmark:
                                     -   util: RandomAString
                                         count: 1000
                                         params: [ 5, 5 ]
+
