--- a/config/yugabyte/write_workloads/insert/yb_colocated/insertG2_varying_columns_yb_colocated.yaml
+++ b/config/yugabyte/write_workloads/insert/yb_colocated/insertG2_varying_columns_yb_colocated.yaml
@@ -1,8 +1,11 @@
-type: POSTGRES
-driver: org.postgresql.Driver
-url: jdbc:postgresql://sagarwal-pg-rds-14.cbtcvpszcgdq.us-west-2.rds.amazonaws.com:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: postgres
-password: Password321
+type: YUGABYTE
+driver: com.yugabyte.Driver
+url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+username: yugabyte
+password: password
+
+#colocated tables
+createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
@@ -97,4 +100,3 @@ microbenchmark:
                                     -   util: RandomAString
                                         count: 1000
                                         params: [ 5, 5 ]
-
