--- a/config/yugabyte/write_workloads/update/yb_colocated/updatetG1_varying_rows_yb_colocated.yaml
+++ b/config/yugabyte/write_workloads/update/yb_colocated/updatetG1_varying_rows_yb_colocated.yaml
@@ -1,18 +1,18 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.22.150:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://172.151.16.174:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
-password: Password321@
+password: Password@321
 
+createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 4
-terminals: 4
+terminals: 1
 collect_pg_stat_statements: true
 works:
     work:
         time_secs: 300
-        active_terminals: 1
         rate: unlimited
         warmup: 60
 microbenchmark:
@@ -53,7 +53,7 @@ microbenchmark:
                   - name: Update_1_row
                     weight: 100
                     queries:
-                        - query: UPDATE update_test_table1 set col3 = ? where id = ?
+                        - query: UPDATE update_test_table1 set col_varchar_3 = ? where id = ?
                           bindings:
                               - util: RandomAString
                                 params: [20, 20]
@@ -64,7 +64,7 @@ microbenchmark:
                   - name: update_100_rows
                     weight: 100
                     queries:
-                        - query: UPDATE update_test_table2 set col3 = ? where id > 100 and id <= 200
+                        - query: UPDATE update_test_table2 set col_varchar_3 = ? where id > 100 and id <= 200
                           bindings:
                               - util: RandomAString
                                 params: [20, 20]
@@ -74,7 +74,7 @@ microbenchmark:
                   - name: update_1000_rows
                     weight: 100
                     queries:
-                        - query: UPDATE update_test_table3 set col3 = ? where id > 1000 and id <= 2000
+                        - query: UPDATE update_test_table3 set col_varchar_3 = ? where id > 1000 and id <= 2000
                           bindings:
                               - util: RandomAString
                                 params: [20, 20]
