--- a/config/yugabyte/scan_workloads/yb_colocated/scanG2_colo_pkey_rangeScan_increasingRows.yaml
+++ b/config/yugabyte/scan_workloads/yb_colocated/scanG2_colo_pkey_rangeScan_increasingRows.yaml
@@ -9,7 +9,7 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://172.151.54.67:5433/yugabyte?sslmode=require
-createdb: create database yb_colocated_g21 with colocated=true
+createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 username: yugabyte
 password: Password@123
 batchsize: 128
