--- a/config/yugabyte/write_workloads/update/yb_colocated/updateG2_varying_indexs_yb_colocated.yaml
+++ b/config/yugabyte/write_workloads/update/yb_colocated/updateG2_varying_indexs_yb_colocated.yaml
@@ -54,27 +54,32 @@ microbenchmark:
                     -   name: Update_1_row
                         weight: 100
                         queries:
-                            -   query: UPDATE update_test_table1 set col_int_1 = col_int_1+10 where id = ?
+                            -   query: UPDATE update_test_table1 set col_int_1 = ? where id = ?
                                 bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000 ]
                                     -   util: RandomNumber
                                         params: [ 1, 1000000 ]
             -   workload: update_1_index_column
                 run:
-                    -   name: update_100_rows
+                    -   name: update_1_row
                         weight: 100
                         queries:
-                            -   query: UPDATE update_test_table2 set col_int_1 = col_int_1+10 where id = ?
+                            -   query: UPDATE update_test_table2 set col_int_1 = ? where id = ?
                                 bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000 ]
                                     -   util: RandomNumber
                                         params: [ 1, 1000000 ]
             -   workload: update_covering_index_column
                 run:
-                    -   name: update_1000_rows
+                    -   name: update_1_row
                         weight: 100
                         queries:
-                            -   query: UPDATE update_test_table3 set col_int_1 = col_int_1+10 where id = ?
+                            -   query: UPDATE update_test_table3 set col_int_1 = ? where id = ?
                                 bindings:
                                     -   util: RandomNumber
+                                        params: [ 1, 10000 ]
+                                    -   util: RandomNumber
                                         params: [ 1, 1000000 ]
-
 
