--- a/config/yugabyte/write_workloads/update/yb_colocated/updateG3_varying_columns_yb_colocated.yaml
+++ b/config/yugabyte/write_workloads/update/yb_colocated/updateG3_varying_columns_yb_colocated.yaml
@@ -12,7 +12,6 @@ collect_pg_stat_statements: true
 works:
     work:
         time_secs: 300
-        active_terminals: 1
         rate: unlimited
         warmup: 60
 microbenchmark:
@@ -29,11 +28,11 @@ microbenchmark:
         loadRules:
             - table: update_test_table
               count: 3
-              rows: 1000000
+              rows: 100000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 1000000]
+                    params: [1, 100000]
                   - name: col
                     count: 1100
                     util: RandomAString
@@ -50,7 +49,7 @@ microbenchmark:
                                 count: 10
                                 params: [4, 4]
                               - util: RandomNumber
-                                params: [1, 1000000]
+                                params: [1, 100000]
 
             - workload: update_100_cols
               run:
@@ -63,7 +62,7 @@ microbenchmark:
                                 count: 100
                                 params: [4, 4]
                               - util: RandomNumber
-                                params: [1, 1000000]
+                                params: [1, 100000]
 
             - workload: update_1000_cols
               run:
@@ -76,4 +75,4 @@ microbenchmark:
                                 count: 1000
                                 params: [4, 4]
                               - util: RandomNumber
-                                params: [1, 1000000]
+                                params: [1, 100000]
