--- a/config/yugabyte/write_workloads/insert/yugabyte/insertG1_varying_index_yb.yaml
+++ b/config/yugabyte/write_workloads/insert/yugabyte/insertG1_varying_index_yb.yaml
@@ -47,7 +47,7 @@ microbenchmark:
         loadRules:
             -   table: index_test_
                 count: 4
-                rows: 100000
+                rows: 1000000
                 columns:
                     -   name: id
                         util: PrimaryIntGen
