--- a/config/yugabyte/write_workloads/insert/yb_colocated/insertG1_varying_index_yb_colocated.yaml
+++ b/config/yugabyte/write_workloads/insert/yb_colocated/insertG1_varying_index_yb_colocated.yaml
@@ -48,7 +48,7 @@ microbenchmark:
         loadRules:
             -   table: index_test_
                 count: 4
-                rows: 100000
+                rows: 1000000
                 columns:
                     -   name: id
                         util: PrimaryIntGen
