--- a/config/yugabyte/bulkload/aurora/bulkload_goal1_aurora.yaml
+++ b/config/yugabyte/bulkload/aurora/bulkload_goal1_aurora.yaml
@@ -1,8 +1,8 @@
-type: YUGABYTE
-driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: yugabyte
-password:
+type: POSTGRES
+driver: org.postgresql.Driver
+url: jdbc:postgresql://localhost:5432/postgres?sslmode=require
+username: postgres
+password: Password321
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
@@ -17,7 +17,7 @@ works:
         warmup: 0
 
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal1
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal1_pg
     properties:
         # Goal 1 - 1 :: create table with PK -> load data (no index)
         tableName: orders
