--- a/config/yugabyte/bulkload/yb_colocated/bulkload_goal4_yb_colocated.yaml
+++ b/config/yugabyte/bulkload/yb_colocated/bulkload_goal4_yb_colocated.yaml
@@ -1,4 +1,3 @@
-
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
@@ -9,6 +8,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: true
 loaderthreads: 1
 terminals: 1
+
 works:
     work:
         time_secs: 10
@@ -18,25 +18,25 @@ transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.pg.Goal3
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal4_yb
     properties:
-        # Goal3 - 1 :: create table with 15 fields -> load data for 3M rows (only PK)
+        # Goal4 - 1 :: create table with 10 fields, 3M rows -> load data (only PK)
         tableName: orders
-        columns: 15
+        columns: 10
         rows: 3000000
         filePath: orders.csv
         stringLength: 32
 
-#        # Goal3 - 2 :: create table with 15 fields -> load data for 30M rows (only PK)
+#        # Goal4 - 2 :: create table with 20 fields, 3M rows -> load data (only PK)
 #        tableName: orders
-#        columns: 15
-#        rows: 30000000
+#        columns: 20
+#        rows: 3000000
 #        filePath: orders.csv
 #        stringLength: 32
 #
-#        # Goal3 - 3 :: create table with 15 fields -> load data for 300M rows (only PK)
+#        # Goal4 - 3 :: create table with 100 fields, 3M rows -> load data (only PK)
 #        tableName: orders
-#        columns: 15
-#        rows: 300000000
+#        columns: 100
+#        rows: 3000000
 #        filePath: orders.csv
 #        stringLength: 32
