--- a/config/yugabyte/bulkload/postgres/bulkload_goal2_pg.yaml
+++ b/config/yugabyte/bulkload/postgres/bulkload_goal2_pg.yaml
@@ -1,8 +1,9 @@
-type: YUGABYTE
-driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: yugabyte
-password:
+type: POSTGRES
+driver: org.postgresql.Driver
+url: jdbc:postgresql://localhost:5432/postgres?sslmode=require
+username: postgres
+password: Password321
+
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: true
@@ -17,7 +18,7 @@ transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal2
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal2_pg
     properties:
         # Goal2 - 1 :: create table with PK -> create 1 index -> Load data (1 index)
         tableName: orders
