--- a/config/yugabyte/bulkload/yb_colocated/bulkload_goal3_yb_colocated.yaml
+++ b/config/yugabyte/bulkload/yb_colocated/bulkload_goal3_yb_colocated.yaml
@@ -1,9 +1,9 @@
-type: POSTGRES
-driver: org.postgresql.Driver
-url: jdbc:postgresql://localhost:5432/postgres?sslmode=require
-username: postgres
-password: Password321
 
+type: YUGABYTE
+driver: com.yugabyte.Driver
+url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
+username: yugabyte
+password:
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: true
@@ -18,7 +18,7 @@ transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.pg.Goal3
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.pg.Goal3_yb
     properties:
         # Goal3 - 1 :: create table with 15 fields -> load data for 3M rows (only PK)
         tableName: orders
