--- a/config/yugabyte/demo/featurebench_count_execute.yaml
+++ b/config/yugabyte/demo/featurebench_count_execute.yaml
@@ -10,7 +10,6 @@ terminals: 1
 works:
     work:
         time_secs: 3
-        active_terminals: 1
         rate: 1000
         warmup: 0
 microbenchmark:
@@ -36,7 +35,7 @@ microbenchmark:
                         - 128
 
         executeRules:
-            - workload: RangeScan
+            - workload: RangeScan1
               run:
                   - name: ReadQuery1
                     weight: 50
@@ -62,7 +61,8 @@ microbenchmark:
                                 params:
                                     - 1
                                     - 1000
-            - run:
+            - workload: RangeScan2
+              run:
                   - name: ReadQuery2
                     weight: 50
                     queries:
