--- a/config/yugabyte/demo/featurebench_count_sample.yaml
+++ b/config/yugabyte/demo/featurebench_count_sample.yaml
@@ -8,13 +8,9 @@ isolation: TRANSACTION_REPEATABLE_READ
 terminals: 1
 works:
     work:
-        serial: true
-        active_terminals: 1
+#        serial: true
         rate: 1000
         weights: 100
-transactiontypes:
-    transactiontype:
-        name: FeatureBench
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
