--- a/config/yugabyte/demo/featurebench_default_afterLoad.yaml
+++ b/config/yugabyte/demo/featurebench_default_afterLoad.yaml
@@ -9,12 +9,9 @@ loaderThreads: 1
 terminals: 1
 works:
     work:
-        time: 10
+        time_secs: 10
         rate: 1000
         weights: 100
-transactiontypes:
-    transactiontype:
-        name: FeatureBench
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.TestAfterLoad
     properties: {}
