--- a/config/yugabyte/demo/featurebench_microbenchmark1_sonal.yaml
+++ b/config/yugabyte/demo/featurebench_microbenchmark1_sonal.yaml
@@ -10,11 +10,9 @@ terminals: 1
 works:
     work:
         time_secs: 1
-        active_terminals: 1
+#        active_terminals: 1
         rate: 1000
         warmup: 0
-#transactiontypes:
-#    transactiontype:
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBMicroBenchmarkImplSonal
     properties:
