--- a/config/yugabyte/demo/featurebench_after_load.yaml
+++ b/config/yugabyte/demo/featurebench_after_load.yaml
@@ -9,8 +9,7 @@ terminals: 1
 loaderthreads: 1
 works:
     work:
-        time: 4
-        active_terminals: 1
+        time_secs: 4
         rate: 1000
         warmup: 0
 microbenchmark:
