--- a/config/yugabyte/demo/featurebench_test_utils.yaml
+++ b/config/yugabyte/demo/featurebench_test_utils.yaml
@@ -9,8 +9,7 @@ loaderThreads: 1
 terminals: 1
 works:
     work:
-        time: 3
-        active_terminals: 1
+        time_secs: 3
         rate: 1000
         warmup: 0
 microbenchmark:
