refactored and fix

--- a/config/yugabyte/bulkload/aurora/bulkload_goal3_aurora.yaml
+++ b/config/yugabyte/bulkload/aurora/bulkload_goal3_aurora.yaml
@@ -18,7 +18,7 @@ transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal3_pg
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal3
     properties:
         # Goal3 - 1 :: create table with 15 fields -> load data for 3M rows (only PK)
         tableName: orders
