--- a/config/yugabyte/bulkload/yb_colocated/bulkload_goal2_yb_colocated.yaml
+++ b/config/yugabyte/bulkload/yb_colocated/bulkload_goal2_yb_colocated.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://172.151.16.174:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&connectTimeout=144000&socketTimeout=14400&tcpKeepAlive=true
 username: yugabyte
-password:
+password: Password@321
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
@@ -18,17 +18,17 @@ transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal2_yb
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal2
     properties:
         # Goal2 - 1 :: create table with PK -> create 1 index -> Load data (1 index)
-        tableName: orders
-        columns: 15
-        rows: 3000000
-        indexes: 1
-        filePath: orders.csv
-        stringLength: 32
-        create_index_before_load: true
-        create_index_after_load: false
+#        tableName: orders
+#        columns: 15
+#        rows: 3000000
+#        indexes: 1
+#        filePath: orders.csv
+#        stringLength: 32
+#        create_index_before_load: true
+#        create_index_after_load: false
 
 #        # Goal2 - 2 :: create table with PK -> load data -> create 1 index
 #        tableName: orders
@@ -51,12 +51,12 @@ microbenchmark:
 #        create_index_after_load: false
 #
 #        # Goal2 - 2 :: create table with PK -> load data -> create 1 index
-#        tableName: orders
-#        columns: 15
-#        rows: 3000000
-#        indexes: 5
-#        filePath: orders.csv
-#        stringLength: 32
-#        create_index_before_load: false
-#        create_index_after_load: true
+        tableName: orders
+        columns: 15
+        rows: 3000000
+        indexes: 5
+        filePath: orders.csv
+        stringLength: 32
+        create_index_before_load: false
+        create_index_after_load: true
 
