--- a/config/yugabyte/bulkload/yugabyte/bulkload_goal4_yb.yaml
+++ b/config/yugabyte/bulkload/yugabyte/bulkload_goal4_yb.yaml
@@ -18,7 +18,7 @@ transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal4_yb
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal4
     properties:
         # Goal4 - 1 :: create table with 10 fields, 3M rows -> load data (only PK)
         tableName: orders
