--- a/config/yugabyte/bulkload/yb_colocated/bulkload_goal4_yb_colocated.yaml
+++ b/config/yugabyte/bulkload/yb_colocated/bulkload_goal4_yb_colocated.yaml
@@ -1,6 +1,6 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.16.174:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
 password: Password@321
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
